remove unused imports and commented code