@@ -12,21 +12,11 @@ public class TimekeeperClient {
     private final WebClient CLIENT_URL;
     private final String HEADER;
 
-//    @Value("${TIMEKEEPER.AUTH}")
-//    private static String HEADER_VALUE;
-//    @Value("${TIMEKEEPER.URL}")
-//    private static String BASE_URL;
-
     public TimekeeperClient(@Value("${TIMEKEEPER.URL}") String baseUrl,
                             @Value("${TIMEKEEPER.AUTH}") String HEADER) {
         CLIENT_URL = WebClient.create(baseUrl);
         this.HEADER = HEADER;
     }
-
-//    public TimekeeperClient() {
-//        CLIENT_URL = WebClient.create(BASE_URL);
-//        this.HEADER = HEADER_VALUE;
-//    }
 
     public TimekeeperUserResponseDto getUser(Long id) {
         System.out.println("HEADER: " + HEADER);
@@ -39,13 +29,12 @@ public class TimekeeperClient {
         assert dto != null;
         return dto.timekeeperUsers().stream()
                 .map(tkUser -> {
-                    var user = new TimekeeperUserResponseDto(
+                    return new TimekeeperUserResponseDto(
                             tkUser.firstName(),
                             tkUser.lastName(),
                             tkUser.email(),
                             tkUser.phone(),
                             tkUser.id());
-                    return user;
-                }).toList().get(0);
+                }).toList().getFirst();
     }
 }
